fix broken subtitle on mobile devices

--- a/darkmode.css
+++ b/darkmode.css
@@ -223,6 +223,9 @@ p{
     .chatbox-title{
         font-size:2em;
     }
+    .chatbox-subtitle{
+        font-size:1em;
+    }
     .messageviewer{
         font-size:1em;
     }
